# mod_authz_ldap

./: Makefile  README.md  mod_authz_ldap-0.26-memleak.patch  mod_authz_ldap-0.26-nopasswd.patch  mod_authz_ldap.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.tmpl.in  NEWS  README  TODO  authz.h.in  configure  configure.in
src/docs/: .message  Makefile.am  Makefile.in  README  authzldap.txt  cert2ldap.1  certfind.1  configuration.html  download.html.in  howto.html  index.html  index.html.in  installation.html  ldap.html  mod_authz_ldap.HOWTO  reference.html  webactivate.in
src/ldap/: Makefile.am  Makefile.in  README  authzldap.ldif  authzldap.schema  authzldap.slapd.conf  slapd.conf.in
src/module/: Makefile.am  Makefile.in  README  age.c  auth.c  authz.c  certmap.c  filterexpand.c  mod_authz_ldap.c  mod_authz_ldap.h  modconf.c  utilities.c
src/patches/: Makefile.am  Makefile.in  README  ssl_engine_kernel.c-1.3.14.diff  ssl_engine_kernel.c-1.3.19.diff  ssl_engine_kernel.c-1.3.20.diff
src/tools/: Makefile.am  Makefile.in  README  addcertmap  addgroup  adduser  asn1tostr.c  asn1tostr.h  cert2ldap.c  certfind.c  x509tomem.c  x509tomem.h
