##
## Makefile.am -- generates the Makefile.in
##
##  (c) 2000 Dr. Andreas Mueller, Beratung und Entwicklung
##
##  $Id: Makefile.am,v 1.4 2002/10/10 08:46:06 afm Exp $
##
VERSION = @VERSION@

EXTRA_DIST = README 							\
	ssl_engine_kernel.c-1.3.14.diff 				\
	ssl_engine_kernel.c-1.3.19.diff					\
	ssl_engine_kernel.c-1.3.20.diff	

